Closed
Bug 408288
Opened 18 years ago
Closed 18 years ago
This particular animated gif looks distorted at the right side
Categories
(Core :: Graphics: ImageLib, defect, P2)
Core
Graphics: ImageLib
Tracking
()
VERIFIED
FIXED
mozilla1.9beta3
People
(Reporter: martijn.martijn, Assigned: alfredkayser)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
|
30.02 KB,
image/gif
|
Details | |
|
2.92 KB,
patch
|
pavlov
:
review+
|
Details | Diff | Splinter Review |
See the image, it looks distorted when the animation is at the right side.
This regressed between 2007-11-17 and 2007-11-18:
Regression from bug 403363.
| Assignee | ||
Comment 1•18 years ago
|
||
Patch coming up.
When the frame is clipped the source pixels are not copied in the right way to the destination frame.
Status: NEW → ASSIGNED
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → alfredkayser
Status: ASSIGNED → NEW
| Assignee | ||
Comment 2•18 years ago
|
||
The patch from the other bug did ensure that the image didn't crash on clipped frames, but those frames were not drawn correctly.
Attachment #293100 -
Flags: review?(pavlov)
| Assignee | ||
Comment 3•18 years ago
|
||
Note with this patch the second corrupted image of bug 403363 now looks much better also: https://bugzilla.mozilla.org/attachment.cgi?id=288296
Status: NEW → ASSIGNED
Updated•18 years ago
|
Flags: blocking1.9?
Comment 4•18 years ago
|
||
We should probably take this patch w/ Stuart's review. +'ing with P2.
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Updated•18 years ago
|
Attachment #293100 -
Flags: review?(pavlov) → review+
| Assignee | ||
Updated•18 years ago
|
Attachment #293100 -
Flags: superreview?(tor)
Comment 5•18 years ago
|
||
Comment on attachment 293100 [details] [diff] [review]
V1: Really do the clipping in the right way
stuart's review should be enough here, especially since he's the module owner.
Attachment #293100 -
Flags: superreview?(tor)
Comment 6•18 years ago
|
||
Comment on attachment 293100 [details] [diff] [review]
V1: Really do the clipping in the right way
stuart's review should be enough here, especially since he's the module owner.
Updated•18 years ago
|
Keywords: checkin-needed
Comment 7•18 years ago
|
||
Checking in modules/libpr0n/src/imgContainer.cpp;
/cvsroot/mozilla/modules/libpr0n/src/imgContainer.cpp,v <-- imgContainer.cpp
new revision: 1.63; previous revision: 1.62
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
OS: Windows XP → All
Hardware: PC → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
| Assignee | ||
Comment 8•18 years ago
|
||
It is difficult to see, as the animation is quite quick, but there is no more distortion in the current build:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11
Status: RESOLVED → VERIFIED
Comment 9•18 years ago
|
||
(In reply to comment #8)
> It is difficult to see, as the animation is quite quick, but there is no more
> distortion in the current build:
> Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127
> Firefox/2.0.0.11
Firefox 2.0.0.11? I don't think it has this problem or patch! :)
| Assignee | ||
Comment 10•18 years ago
|
||
Oops, copied the wrong build id:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3pre) Gecko/2007122105 Minefield/3.0b3pre
Updated•18 years ago
|
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•