Bug 408288 - "This particular animated gif looks distorted at the right side" (Really do the clipping in the right way) [p=alfredkayser@nl.ibm.com (Alfred Kayser) r=stuart a=blocking1.9+]